--- a/fastor-logistics/styles/faq.css
+++ b/fastor-logistics/styles/faq.css
@@ -1,18 +1,19 @@
 .faq__main_container{
-    padding-bottom: 5%;
+    padding:3% 0 6% 0;
+    width:85%;
+    margin:auto;
 }
 
 .faq__inner_container{
     display:flex;
     gap:2%;
     flex-wrap: wrap;
-    width:95%;
     margin:auto;
     justify-content: center;
 }
 .faq__card_container{
     /* border:1px solid purple; */
-    width:max(40%,566px);
+    width:max(40%,500px);
     /* height:122px; */
     display:flex;
     justify-content: center;
@@ -24,7 +25,8 @@
     background-color: #FFFFFF;
     box-shadow: 0px 8px 20px rgba(8, 15, 52, 0.12);
     border-radius: 12px;
-    padding:2%
+    padding:2%;
+    line-height: 24px;
 }
 
 .faq__card_title{
