--- a/fastor-logistics/styles/simplify.css
+++ b/fastor-logistics/styles/simplify.css
@@ -1,8 +1,9 @@
 .simplify__container{
     /* border:1px solid red; */
-    width:90%;
-    padding:20px 10px 30px 10px;
+    width:85%;
+    padding:20px 0 30px 0;
     margin:auto;
+    margin-top: 5%;
 }
 
 .simplify__inner_container{
@@ -15,12 +16,23 @@
 }
 .simplify__card_container{
     /* border:1px solid green; */
-    width:353px;
-    height:200px;
+    width:300px;
+    height:180px;
     padding:1rem 0;
+    border:1px solid #DFDFDF;
     background: #FFFFFF;
-    box-shadow: 0px 32px 44px rgba(0, 0, 0, 0.09);
+    /* box-shadow: 0px 32px 44px rgba(0, 0, 0, 0.09); */
     border-radius: 12px;
     margin-top: 4%;
-    font-size:22px;
+    font-size:var(--text-low-medium);
+    padding:3rem 2rem 1rem 2rem;
+}
+.simplify__card_container:hover{
+    box-shadow: 0px 32px 44px rgba(0, 0, 0, 0.08);}
+
+@media (max-width:"920px"){
+    .simplify__card_container{
+        font-size: var(--text-small);
+        padding:1rem;
+    }
 }
